--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=EcoSfera
-spring.datasource.url=jdbc:mysql://localhost:3306/EcoSfera
+spring.datasource.url=jdbc:mysql://localhost:3306/EcoSfera1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
