--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=EcoSfera
-spring.datasource.url=jdbc:mysql://localhost:3306/EcoSfera1
+spring.datasource.url=jdbc:mysql://localhost:3307/ecosferapi
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-server.port=8080
